--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "start": "vite"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "3.3.2"
   },
   "dependencies": {
-    "vite": "^4.4.2"
+    "vite": "4.4.2"
   }
 }
